[package]
name = "winit-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = "0.17.0"
winit = "0.30.5"
web-sys = "0.3"
wasm-bindgen = "0.2"
log = "0.4.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"